@@ -92,6 +92,7 @@
   <string name="action_toggle_done">Toggle done</string>
   <string name="action_edit_notes">Edit notes</string>
   <string name="action_add_missing">Add missing products</string>
+  <string name="action_purchase_done_items">Purchase done items</string>
   <string name="action_purchase_all_items">Purchase all items</string>
   <string name="action_skip_entry">Skip entry</string>
   <string name="action_toggle_flash">Toggle flash</string>
@@ -299,6 +300,7 @@
   <string name="error_bounds_higher">Must be higher than %1$s</string>
   <string name="error_offline">Offline</string>
   <string name="error_offline_subtitle">This page only works with internet access. Check your connection.</string>
+  <string name="error_no_done_items">There are no items marked as done</string>
   <string name="error_name_exists">Name already exists</string>
   <string name="error_network">Network error</string>
   <string name="error_network_subtitle">The required data could not be loaded completely</string>
